# Exoplanet-Detection-Project

./: .replit  CLEANUP_GUIDE.md  CODEBASE_ANALYSIS.md  COLAB_END_TO_END.md  HOW_TO_RUN.md  INTEGRATION_COMPLETE.md  QUICK_START_GUIDE.md  README.md  RUN_THIS_FIRST.md  SYSTEM_READY.md  UNIFIED_ARCHITECTURE.md  batch_features.csv  check_and_split.py  check_labels.py  colab_end_to_end.ipynb  colab_pipeline.ipynb  config.yaml  create_labels.py  create_labels_fixed.py  create_metadata_from_filenames.py  demo_complete_system.py  demo_curve_0.npz  demo_curve_1.npz  demo_curve_2.npz  demo_curve_3.npz  demo_curve_4.npz  demo_exoplanet.npz  fix_labels.py  hp_extractor_docs.md  labels.csv  organize_dataset_complete.py  powershell_commands.md  prepare_dataset.py  prepare_full_dataset.py  process_your_data.py  pyproject.toml  replit.md  requirements.txt  simple_test.py  terminal_commands.md  (+8 more)
attached_assets/: Pasted-You-are-to-generate-a-complete-Python-project-repository-for-processing-visualizing-and-extracting-1757141643246_1757141643247.txt
dashboard/: display_curves.py  model_dashboard_code.py  model_display.py
data/: clean.py  fsplit2.py  lightcurve_features.csv  splitdata.py
demo_output/: batch_features.csv  custom_config.yaml  features.csv
exodet/: __init__.py  __version__.py
extract_features/: display_curves.py  hp_extractor.py  hp_extractor2.py
lightcurve_project/: README.md  batch_process.py  main.py  requirements.txt
model/: lock_layer_parameters.py  model_code.py
outputs/: exo_features_part_000.csv  exo_features_part_001.csv  exo_features_part_002.csv  (+8 more)
(+3168 files in other folders)
